[gd_scene load_steps=28 format=3 uid="uid://c3j6y2wng6s55"]

[ext_resource type="Script" path="res://scenes/levels/level_1.gd" id="1_sol85"]
[ext_resource type="Script" path="res://scenes/scripts/day_night.gd" id="2_57ex4"]
[ext_resource type="Texture2D" uid="uid://cc7t2pmj3xv2k" path="res://sprites/background/daynightcycle-gradient-texture.tres" id="3_pun4j"]
[ext_resource type="Script" path="res://scenes/scripts/camera.gd" id="4_yg7kr"]
[ext_resource type="PackedScene" uid="uid://djb0frbwme6q3" path="res://scenes/tutorial.tscn" id="5_d0cm3"]
[ext_resource type="PackedScene" uid="uid://qu06wlu637ji" path="res://scenes/scripts/game_start_321.tscn" id="6_bpfxa"]
[ext_resource type="Script" path="res://scenes/scripts/camera_effects.gd" id="6_crvya"]
[ext_resource type="PackedScene" uid="uid://giv47sl8et1g" path="res://player/hp.tscn" id="7_p4hff"]
[ext_resource type="PackedScene" uid="uid://dj3b8i7bdcu8j" path="res://scenes/screens/Pause.tscn" id="7_v0bxg"]
[ext_resource type="PackedScene" uid="uid://c86ohxnlg8a" path="res://player/dash_stamina.tscn" id="8_cgddi"]
[ext_resource type="PackedScene" uid="uid://d4eb43rmirjs8" path="res://scenes/score.tscn" id="9_803pw"]
[ext_resource type="PackedScene" uid="uid://bbobth255p4np" path="res://scenes/timer.tscn" id="10_5ty1u"]
[ext_resource type="PackedScene" uid="uid://wu4f2v4h1o72" path="res://scenes/screens/WinScreen.tscn" id="11_11oa4"]
[ext_resource type="PackedScene" uid="uid://b4cgmatdls027" path="res://scenes/screens/GameOver.tscn" id="12_jpi7t"]
[ext_resource type="Shader" path="res://shaders/border.gdshader" id="13_ax4k1"]
[ext_resource type="PackedScene" uid="uid://dnhtj68mhqb2u" path="res://scenes/bg_moves.tscn" id="14_lav7a"]
[ext_resource type="PackedScene" uid="uid://cefk00qrd2w1n" path="res://player/ghost_player.tscn" id="15_r4u87"]

[sub_resource type="Curve2D" id="Curve2D_l6exe"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -144.565, -96.875, 0, 0, 0, 0, 332.663, -99.5643, 0, 0, 0, 0, 1295.65, -101.042, 0, 0, 0, 0, 1302.17, 965.625, 0, 0, 0, 0, -151.087, 966.667, 0, 0, 0, 0, -148.913, -82.2917)
}
point_count = 6

[sub_resource type="Animation" id="Animation_oprp0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(756, -64)]
}

[sub_resource type="Animation" id="Animation_rgvwu"]
resource_name = "show_health"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(756, -87), Vector2(756, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3dku"]
_data = {
"RESET": SubResource("Animation_oprp0"),
"show_health": SubResource("Animation_rgvwu")
}

[sub_resource type="Animation" id="Animation_iifv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, -118)]
}

[sub_resource type="Animation" id="Animation_o1m1c"]
resource_name = "show_timer"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, -118), Vector2(576, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nbdmb"]
_data = {
"RESET": SubResource("Animation_iifv3"),
"show_timer": SubResource("Animation_o1m1c")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmbww"]
shader = ExtResource("13_ax4k1")
shader_parameter/rect_size = Vector2(1.935, 0.145)
shader_parameter/bness = 5.45
shader_parameter/fall_off_scale = 6.385
shader_parameter/b_offset = 0.08
shader_parameter/speed = 3.188
shader_parameter/noise_intensity = 0.553

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldot6"]
size = Vector2(1217, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8ebb"]
size = Vector2(30, 984)

[node name="main" type="Node2D"]
script = ExtResource("1_sol85")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.795869, 0.802365, 0.885547, 1)

[node name="CanvasModulate2" type="CanvasModulate" parent="."]
visible = false
z_index = 1
position = Vector2(576, 432)
scale = Vector2(3.87, 3.87)
script = ExtResource("2_57ex4")
gradient_texture = ExtResource("3_pun4j")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
zoom = Vector2(0.9, 0.9)
process_callback = 0
position_smoothing_speed = 10.0
script = ExtResource("4_yg7kr")

[node name="Path2D" type="Path2D" parent="Camera2D"]
position = Vector2(-525, -408)
scale = Vector2(0.920002, 0.96)
curve = SubResource("Curve2D_l6exe")

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/Path2D"]
unique_name_in_owner = true
position = Vector2(-144.565, -96.875)
rotation = -0.00563519

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" parent="Pause" instance=ExtResource("7_v0bxg")]

[node name="GameStartTimer" parent="Pause" instance=ExtResource("6_bpfxa")]
visible = false

[node name="Tutorial" parent="." instance=ExtResource("5_d0cm3")]

[node name="CameraControl" type="Control" parent="."]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
pivot_offset = Vector2(579, 423)
script = ExtResource("6_crvya")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.7

[node name="FireFlySpawnTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource("7_p4hff")]
z_index = 6
offset_left = 756.0
offset_top = -64.0
offset_right = 1056.0
offset_bottom = -24.0

[node name="healthPlayer" type="AnimationPlayer" parent="UI/HealthBar"]
libraries = {
"": SubResource("AnimationLibrary_u3dku")
}

[node name="Stamina" parent="UI" instance=ExtResource("8_cgddi")]
z_index = 6
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 137.0
offset_top = 16.0
offset_right = 137.0
offset_bottom = 16.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Score" parent="UI" instance=ExtResource("9_803pw")]
offset_left = -119.0
offset_top = -104.0
offset_right = -119.0
offset_bottom = -104.0

[node name="CountDownTimer" parent="UI" instance=ExtResource("10_5ty1u")]
unique_name_in_owner = true
offset_top = -118.0
offset_bottom = -118.0

[node name="timerPlayer" type="AnimationPlayer" parent="UI/CountDownTimer"]
libraries = {
"": SubResource("AnimationLibrary_nbdmb")
}

[node name="WinScreen" parent="UI" instance=ExtResource("11_11oa4")]
visible = false
z_index = 10
offset_top = 2.0
offset_bottom = 2.0

[node name="GameOverScreen" parent="UI" instance=ExtResource("12_jpi7t")]
visible = false
z_index = 10

[node name="Border" type="CanvasGroup" parent="UI"]
modulate = Color(1, 1, 1, 0.235294)
self_modulate = Color(0.535276, 0.299479, 0.895856, 1)
position = Vector2(-4, 10)

[node name="ColorRect" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = -7.0
offset_top = -192.0
offset_right = 33.0
offset_bottom = -152.0
scale = Vector2(30.04, 8)

[node name="ColorRect2" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = 104.0
offset_top = -182.0
offset_right = 144.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect4" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = 1375.0
offset_top = -182.0
offset_right = 1415.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect3" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = -7.0
offset_top = 752.0
offset_right = 33.0
offset_bottom = 792.0
scale = Vector2(30.04, 8)

[node name="bg" parent="." instance=ExtResource("14_lav7a")]
z_index = -10
position = Vector2(576, 432)

[node name="GhostPlayer" parent="." instance=ExtResource("15_r4u87")]
unique_name_in_owner = true
z_index = 2
position = Vector2(576, 239)

[node name="wall" type="StaticBody2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="wall"]
position = Vector2(1004, 559)
scale = Vector2(1.03, 1.03)
build_mode = 1
polygon = PackedVector2Array(310, 410, -1100, 410, -1100, -510, -1017, -510, -1017, 320, 194, 320, 194, -524, -1066, -524, -1066, -561.165, 310, -561.165)

[node name="PossessedEscapes" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(576, -41)
shape = SubResource("RectangleShape2D_ldot6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(583, 956)
shape = SubResource("RectangleShape2D_ldot6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(-73, 443)
shape = SubResource("RectangleShape2D_g8ebb")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(1237, 435)
shape = SubResource("RectangleShape2D_g8ebb")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="FireFlySpawnTimer" to="." method="_on_fire_fly_spawn_timer_timeout"]
